Update menu toggle logic to prevent collapsing the current section

--- a/ui-ngx/src/styles.scss
+++ b/ui-ngx/src/styles.scss
@@ -1324,6 +1324,10 @@ pre.tb-highlight {
   .cdk-overlay-pane .select-panel-full-width {
     min-width: min-content !important;
   }
+
+  .white {
+    color: white;
+  }
 }
 
 .tb-fullscreen-backdrop {
